# json-grep

./: .gitignore  Cargo.toml  README.md
crates/core/: app.rs  main.rs  utils.rs
crates/jg/: Cargo.toml
crates/jg/src/: lib.rs  logic.rs  matcher.rs
